fix z-index (#1098)

--- a/client/components/Schedule/Header/Waitlist/WaitlistTableWithActions/reskin-styles.scss
+++ b/client/components/Schedule/Header/Waitlist/WaitlistTableWithActions/reskin-styles.scss
@@ -7,6 +7,7 @@
   margin: 0px 22px;
   min-width: unset;
   overflow: hidden;
+  z-index: 1;
 
   * {
     .rt-thead {
